# llm_client

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
llm_client/: .gitignore  Cargo.toml  README.md
llm_client/examples/: basic_completion.rs  basic_primitive.rs  decision.rs  device_config.rs  extract_urls.rs  reason.rs
llm_client/src/: basic_completion.rs  lib.rs  prelude.rs
llm_client/src/backend_builders/: anthropic.rs  llama_cpp.rs  mistral_rs.rs  mod.rs  openai.rs  perplexity.rs
llm_client/src/components/: instruct_prompt.rs  mod.rs
llm_client/src/components/cascade/: mod.rs  round.rs  step.rs
llm_client/src/components/grammar/: basic_url.rs  boolean.rs  custom.rs  exact_string.rs  faux_url.rs  integer.rs  mod.rs  none.rs  sentences.rs  text.rs  words.rs
llm_client/src/primitives/: boolean.rs  exact_string.rs  integer.rs  mod.rs  sentences.rs  text.rs  text_list.rs  words.rs
llm_client/src/workflows/: basic_primitive.rs  mod.rs
llm_client/src/workflows/classify/: entity_tagger.rs  linear_entity_tagger.rs  mod.rs  subject_of_text.rs
llm_client/src/workflows/nlp/: mod.rs
llm_client/src/workflows/reason/: decision.rs  mod.rs  one_round.rs
llm_client/tests/it/: api_backends.rs  basic_completion_tests.rs  basic_primitive_tests.rs  decision_tests.rs  extract_tests.rs  llama_cpp.rs  main.rs
llm_client/tests/llm_client_tests/: basic_completion_tests.rs  llama_cpp.rs  main.rs  mistral_rs.rs  reason_tests.rs
llm_client_testing/: Cargo.toml
llm_client_testing/_old_model_comparison/: reader.rs
llm_client_testing/src/: lib.rs  speed_bench.rs  test_loader.rs  test_types.rs
llm_client_testing/src/speed_bench/: types.rs
llm_devices/: Cargo.toml  README.md
llm_devices/src/: lib.rs  logging.rs  target_dir.rs
llm_devices/src/devices/: cpu.rs  cuda.rs  gpu.rs  metal.rs  mod.rs  ram.rs
llm_devices/src/llm_binary/: binary.rs  build.rs  download.rs  mod.rs  zip.rs
llm_gui/: Cargo.toml  Dioxus.toml  build.rs
llm_gui/assets/: input.css  tailwind.config.js
llm_gui/public/: style.css  tailwind.css
llm_gui/src/: main.rs
llm_gui/src/api/: api_models.rs  llm_client.rs  local_models.rs  mod.rs
llm_gui/src/ui/: global_state.rs  mod.rs
llm_gui/src/ui/components/: header.rs  mod.rs  query.rs  response.rs
llm_interface/: Cargo.toml  README.md  build.rs
llm_interface/src/: lib.rs  logging.rs
llm_interface/src/llms/: mod.rs
llm_interface/src/llms/api/: client.rs  config.rs  error.rs  mod.rs
llm_interface/src/llms/local/: mod.rs
llm_interface/src/requests/: logit_bias.rs  mod.rs  req_components.rs  res_components.rs  stop_sequence.rs
llm_interface/src/requests/completion/: error.rs  mod.rs  request.rs  response.rs  tool.rs
llm_interface/src/requests/constraints/: logit_bias.rs
llm_interface/tests/it/: api.rs  llama_cpp.rs  main.rs  mistral_rs.rs
llm_models/: Cargo.toml  README.md
llm_models/examples/: model_hf.rs  model_local.rs  model_presets.rs
llm_models/src/: error.rs  hf_loader.rs  lib.rs  tokenizer.rs
llm_models/src/api_model/: anthropic.rs  mod.rs  openai.rs  perplexity.rs
llm_models/src/api_models/: mod.rs  models.rs  providers.rs
llm_models/src/estimate/: math.rs  memory.rs  mod.rs  model.rs  storage.rs
llm_models/src/estimate/loader/: local.rs  mod.rs  tokenizer.rs
llm_models/src/fs/: dir.rs  error.rs  file_path.rs  file_status.rs  mod.rs
llm_models/src/gguf/: chat_template.rs  mod.rs
llm_models/src/gguf/loader/: loader.rs  mod.rs  smart.rs
llm_models/src/gguf/metadata/: general.rs  llm.rs  mod.rs  tokenizer.rs
llm_models/src/gguf_presets/: loader.rs  mod.rs  models.rs  organizations.rs
llm_models/src/hf/: client.rs  config.rs  error.rs  id.rs  mod.rs
llm_models/src/llm/: base.rs  mod.rs
llm_models/src/llm/cloud/: mod.rs  models.rs  providers.rs
llm_models/src/llm/local/: chat_template.rs  mod.rs  organizations.rs
llm_models/src/local_model/: chat_template.rs  hf_loader.rs  mod.rs
llm_models/src/local_model/gguf/: memory.rs  mod.rs
llm_models/src/local_model/metadata/: config_json.rs  general.rs  mod.rs  tokenizer.rs
llm_models/src/local_models/: hf_loader.rs  mod.rs
llm_models/src/local_models/gguf/: memory.rs  mod.rs
llm_models/src/local_models/metadata/: general.rs  mod.rs  (+1 more)
llm_models/src/manifest/: file_encoding_type.rs  file_name_parse.rs  mod.rs  model.rs  profile.rs  profile_from_hf.rs  shard_id.rs
llm_models/tests/it/: custom.rs  main.rs  metadata.rs  preset.rs
llm_models_macros/: Cargo.toml  README.md
llm_models_macros/src/: lib.rs
llm_models_macros/src/api_models/: mod.rs  model.rs  provider.rs
llm_models_macros/src/gguf_models/: mod.rs  model.rs  organization.rs  quant.rs  tokenizers.rs
llm_models_macros/test/: local_presets.json
llm_prompt/: Cargo.toml  README.md
llm_prompt/_tests/it/: api.rs  local.rs  main.rs
llm_prompt/src/: chat_template_prompt.rs  concatenator.rs  lib.rs  llm_prompt.rs  local_content.rs  openai_prompt.rs  prompt_message.rs  prompt_tokenizer.rs  token_count.rs
llm_prompt/src/variants/: api_prompt.rs  local_prompt.rs  mod.rs
llm_prompt/tests/it/: api.rs  chat_template.rs  local.rs  main.rs  open_ai.rs
llm_testing/: Cargo.toml
llm_testing/_old_model_comparison/: mod.rs
llm_testing/src/: backends.rs  lib.rs  test_loader.rs  test_types.rs
llm_testing/src/speed_bench/: mod.rs  types.rs
llm_testing/test_sets/: exact_string.json  extract_urls.json
llm_utils/: Cargo.toml
llm_utils/src/: clean_html.rs  clean_text.rs  concatenator.rs  extract.rs  lib.rs  local_content.rs
llm_utils/src/chunking/: dfs_chunker.rs  external_text_chunker.rs  linear_chunker.rs  mod.rs  overlap.rs
llm_utils/src/splitting/: mod.rs  rule_based.rs
llm_utils/src/test_text/: mod.rs
lmcpp/: Cargo.toml  README.md
lmcpp/src/: error.rs  lib.rs
lmcpp/src/client/: completion.rs  detokenize.rs  embeddings.rs  infill.rs  mod.rs  open_ai.rs  props.rs  tokenize.rs
lmcpp/src/server/: builder.rs  handle.rs  mod.rs
lmcpp/tests/: cli.rs  multiple.rs  process.rs  workflow.rs
lmcpp/tests/common/: endpoints.rs  mod.rs
(+401 files in other folders)
