[workspace]
members = [
    "llm_client",
    "llm_devices",
    "llm_interface",
    "llm_models",
    "llm_prompt",
    "llm_utils",
]
resolver = "2"

[workspace.package]
authors = ["Shelby Jenkins", "LazAI Labs Athors"]
edition = "2021"
exclude = ["Cargo.lock", "target/**/*"]
homepage = "https://github.com/lazai-labs/llm_client"
repository = "https://github.com/lazai-labs/llm_client"
license = "MIT"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1.0.90"
colorful = "0.3.2"
dotenvy = "0.15.7"
indenter = "0.3.3"
llm_devices = { path = "./llm_devices" }
llm_interface = { path = "./llm_interface" }
llm_models = { path = "./llm_models" }
llm_prompt = { path = "./llm_prompt" }
llm_utils = { path = "./llm_utils" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serial_test = "3.1.1"
thiserror = "1.0.64"
tokio = "1.40.0"
tracing = "0.1.40"
url = "2.5.2"
half = "*"
