[workspace]
members=["llm_client", "llm_devices", "llm_interface", "llm_models", "llm_prompt", "llm_testing"]
resolver="2"

[workspace.package]
authors=["Shelby Jenkins"]
edition="2021"
exclude=["Cargo.lock", "target/**/*"]
homepage="https://github.com/shelbyJenkins/llm_client"
license="MIT"
repository="https://github.com/shelbyJenkins/llm_client"

[workspace.dependencies]
anyhow="1.0.95"
colorful="0.3.2"
dotenvy="0.15.7"
indenter="0.3.3"
llm_devices={path="./llm_devices", version="0.0.2"}
llm_interface={path="./llm_interface", version="0.0.2"}
llm_models={path="./llm_models", version="0.0.1"}
llm_prompt={path="./llm_prompt", version="0.0.2"}
llm_utils="0.0.11"
serde={version="1.0.217", features=["derive", "rc"]}
serde_json="1.0.135"
serial_test="3.2.0"
thiserror="2.0.11"
tokio="1.43.0"
tracing="0.1.41"
url="2.5.4"
