[workspace]
members=["llm_models", "llm_prompt", "lmcpp"]
resolver="2"

[workspace.package]
authors=["Shelby Jenkins"]
edition="2024"
exclude=["Cargo.lock", "target/**/*"]
homepage="https://github.com/shelbyJenkins/llm_client"
license="MIT"
repository="https://github.com/shelbyJenkins/llm_client"

[workspace.dependencies]
anyhow="1.0.98"
colorful="0.3.2"
directories="6.0.0"
dotenvy="0.15.7"
indenter="0.3.3"
llm_models={path="./llm_models", version="0.0.3"}
llm_prompt={path="./llm_prompt"}
serde={version="1.0.219", features=["derive", "rc"]}
serde_json="1.0.141"
serial_test="3.2.0"
tempfile="3.20.0"
thiserror="2.0.12"
tokio="1.46.1"
tracing="0.1.41"
url={version="2.5.4", features=["serde"]}
