[package]
description="llm_devices: Device management and build system for LLM inference"
edition.workspace=true
homepage.workspace=true
license.workspace=true
name="llm_devices"
readme="README.md"
repository.workspace=true
version="0.0.3"

[dependencies]
anyhow.workspace=true
colorful.workspace=true
indenter.workspace=true
sysinfo={version="0.33.1", default-features=false, features=["system"]}
thiserror.workspace=true
tracing.workspace=true
tracing-appender="0.2.3"
tracing-subscriber={version="0.3.18", features=["env-filter", "std"]}

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
nvml-wrapper={version="0.10.0"}

[target.'cfg(target_os = "macos")'.dependencies]
objc2="0.5.2"
objc2-metal={version="0.2.2", features=["MTLDevice"]}
