[package]
authors=["shelby jenkins"]
edition="2021"
name="llm_gui"
version="0.1.0"

[dependencies]
anyhow.workspace=true
dioxus={version="0.6.3", features=["fullstack"]}
llm_client={workspace=true, optional=true}
serde.workspace=true

[features]
default=["web"]
server=["dep:llm_client", "dioxus/server"]
web=["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits="dev"
opt-level=1

[profile.server-dev]
inherits="dev"

[profile.android-dev]
inherits="dev"
