[package]
description="llm_models: Load and download LLM models, metadata, and tokenizers"
edition.workspace=true
homepage.workspace=true
license.workspace=true
name="llm_models"
readme="README.md"
repository.workspace=true
version="0.0.3"

[dependencies]
anyhow.workspace=true
byteorder="1.5.0"
dotenvy.workspace=true
hf-hub="0.4.3"
llm_prompt.workspace=true
serde.workspace=true
serde_json.workspace=true
thiserror.workspace=true
tracing.workspace=true
