[package]
description="llm_models: Load and download LLM models, metadata, and tokenizers"
edition.workspace=true
homepage.workspace=true
license.workspace=true
name="llm_models"
readme="README.md"
repository.workspace=true
version="0.0.3"

[dependencies]
anyhow.workspace=true
bon="*"
byteorder="1.5.0"
derive_more={version="*", features=["as_ref", "deref", "display", "into"]}
directories.workspace=true
dotenvy.workspace=true
ggml-quants="0.1.0"
ggus="*"
hf-hub="0.4.3"
minijinja="*"
regex="*"
secrecy="0.10.3"
serde.workspace=true
serde_json.workspace=true
thiserror.workspace=true
tokenizers="*"
tokio="*"
tracing.workspace=true
url={version="*", features=["serde"]}

[dev-dependencies]
tempfile.workspace=true
