[package]
description = "LLM Prompting"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "llm_prompt"
readme = "README.md"
repository.workspace = true
version = "0.1.0"

[dependencies]
anyhow.workspace = true
colorful.workspace = true
indenter.workspace = true
thiserror.workspace = true

minijinja = "2.0.1"

[dev-dependencies]
llm_models.workspace = true
