[package]
description="LLM Prompting"
edition.workspace=true
homepage.workspace=true
license.workspace=true
name="llm_prompt"
readme="README.md"
repository.workspace=true
version="0.0.2"

[dependencies]
anyhow.workspace=true
minijinja="2.0.1"
serde.workspace=true
thiserror.workspace=true

[dev-dependencies]
llm_models={path="../llm_models"}
serde_json.workspace=true
tempfile="3.15.0"
