[package]
description="llm_prompt: Low Level Prompt System for API LLMs and local LLMs"
edition.workspace=true
homepage.workspace=true
license.workspace=true
name="llm_prompt"
readme="README.md"
repository.workspace=true
version="0.0.3"

[dependencies]
anyhow.workspace=true
minijinja="2.0.1"
serde.workspace=true
tracing.workspace=true

[dev-dependencies]
serde_json.workspace=true
tempfile="3.15.0"
