[package]
edition.workspace=true
homepage.workspace=true
license.workspace=true
name="llm_testing"
repository.workspace=true

version="0.0.1"

[dependencies]
anyhow.workspace=true
llm_client={path="../llm_client"}
llm_models.workspace=true
serde.workspace=true
serde_json.workspace=true
tokio={workspace=true, features=["macros", "test-util"]}
tracing.workspace=true
url.workspace=true

[features]
all=["llama_cpp_backend"]
# all=["llama_cpp_backend", "mistral_rs_backend"]
default=["llama_cpp_backend"]
llama_cpp_backend=["llm_client/llama_cpp_backend"]
mistral_rs_backend=["llm_client/mistral_rs_backend"]
